suite application WPF

--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -5,17 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:my="clr-namespace:WPF.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="700" Width="1200">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="3*" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="2*" />
-            <RowDefinition Height="1*" />
+            <RowDefinition Height="35"></RowDefinition>
+            <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
 
-        <my:ListOffre DataContext="{Binding ListeOffreViewModel}" Grid.ColumnSpan="2" Grid.Column="0"></my:ListOffre>
+        <Label HorizontalAlignment="Stretch" Background="BlueViolet" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="19" FontWeight="Bold">Find Your Job</Label>
+
+        <my:ListOffre Grid.Row="1" DataContext="{Binding ListeOffreViewModel}"></my:ListOffre>
     </Grid>
 </Window>
