--- a/WPF/Views/AjouterOffre.xaml
+++ b/WPF/Views/AjouterOffre.xaml
@@ -8,7 +8,9 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AddOffre">
 
-    <Grid>
-        
-    </Grid>
+    <StackPanel>
+        <Label>Intitulé</Label>
+        <TextBox Text="{Binding IntituleCreate}"></TextBox>
+        <Button Command="{Binding CreateOffre}">Valider</Button>
+    </StackPanel>
 </Window>
