--- a/WPF/Views/DetailOffre.xaml
+++ b/WPF/Views/DetailOffre.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl x:Class="WPF.Views.DetailOffre"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,7 +11,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="35"></RowDefinition>
             <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="70px"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -19,19 +20,26 @@
         </Grid.ColumnDefinitions>
 
         <Label Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0" HorizontalAlignment="Stretch" Background="CadetBlue" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="19" FontWeight="Bold">Détail d'une offre</Label>
-
+        
         <StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="3" Orientation="Vertical">
             <Label>Intitulé</Label>
             <TextBox Text="{Binding Intitule}"></TextBox>
             <Label>Date</Label>
-            <TextBox Text="{Binding Date}"></TextBox>
+            <DatePicker SelectedDate="{Binding Date}"></DatePicker>
             <Label>Salaire</Label>
             <TextBox Text="{Binding Salaire}"></TextBox>
+            <Label>Description</Label>
+            <TextBox TextWrapping="Wrap" Height="Auto" AcceptsReturn="True" Text="{Binding Description}"></TextBox>
+            <Label>Statut</Label>
+            <ComboBox ItemsSource="{Binding Statuts}"
+                  DisplayMemberPath="Libelle"
+                  SelectedValuePath="Id"
+                  SelectedValue="{Binding Statut}" />
         </StackPanel>
 
-        <my:ListPostulant Grid.Row="3" Grid.ColumnSpan="2" DataContext="{Binding ListPostulantViewModel}"></my:ListPostulant>
+        <my:ListPostulant Grid.Row="3" Height="Auto" Grid.ColumnSpan="2" DataContext="{Binding ListPostulantViewModel}"></my:ListPostulant>
 
         <Button Width="40" Height="40" Margin="5" Grid.Row="2" Grid.Column="2" Background="Blue" FontSize="25px" Command="{Binding AjouterOffre}">+</Button>
-
+        
     </Grid>
 </UserControl>
