--- a/AppWeb/Views/Offre/ListesOffres.cshtml
+++ b/AppWeb/Views/Offre/ListesOffres.cshtml
@@ -12,7 +12,7 @@
     {
         <li>@offre.Intitule</li>
 
-        <a href="@Url.Action("DetailOffreAsync", "Offre", new { idOffre = offre.Id })">Detail</a>
+        <a href="@Url.Action("DetailOffreAsync", "Offre", new { id = offre.Id })">Detail</a>
     }
 </ul>
 
