--- a/AppWeb/Views/Shared/_Layout.cshtml
+++ b/AppWeb/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
-                    <li>@Html.ActionLink("À propos de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "LitesOffresAsync", "Offre")</li>
+                    <li>@Html.ActionLink("Mes offres postulées", "GetOffresPostuleesAsync", "Employe")</li>
+                    <li>@Html.ActionLink("Offres", "LitesOffresAsync", "Offre")</li>
                 </ul>
             </div>
         </div>
