--- a/AppWeb/Views/Home/Index.cshtml
+++ b/AppWeb/Views/Home/Index.cshtml
@@ -1,31 +1,55 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿@using AppWeb.Models
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+@model List<OffreViewModel>
+
+<div class="py-5 text-center parallax cover gradient-overlay" style="background-image: url(&quot;./Assets/Images/header.jpg&quot;);position:relative;background-position:center center;background-size:cover;">
+    <div class="container d-flex flex-column">
+        <div class="row my-auto">
+            <div class="col-md-12 text-white">
+                <img class="mb-5" src="./Assets/Images/now-logo.png" width="100">
+                <h1 class="mb-3 display-1">FIND YOUR JOB</h1>
+                <h3 class="mb-5">Find the job that suits you best</h3>
+                <form class="form-inline justify-content-center" action="@Url.Action("SearchOffre","Offre")">
+                    <div class="form-group">
+                        @Html.TextBox("searchText", null, new { style= "padding: 1.7rem;font-size: large;", @class= "form-control mx-2 form-control-lg", placeholder = "Ex : Web developer" })
+                    </div>
+                    <button type="submit" class="btn btn-primary" style="font-size:1.2rem;padding: 1rem;border-radius: 3rem;"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+<div class="py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="mb-2"><b>The jobs of the day</b></h3>
+            </div>
+        </div>
+        <div class="row">
+            @foreach (var offre in Model)
+            {
+                <div class="col-lg-4 p-3 col-md-6">
+                    <div class="card">
+                        <div class="card-body p-4">
+                            @{
+                                int maxlengthtitle = 30;
+                                string title = offre.Intitule.Length <= maxlengthtitle ? offre.Intitule : offre.Intitule.Substring(0, maxlengthtitle) + "...";
+                            }
+                            <h3 contenteditable="true"> <b>@title</b> </h3>
+                            @{
+                                int maxlength = 45;
+                                string desc = offre.Description.Length <= maxlength ? offre.Description : offre.Description.Substring(0, maxlength) + "...";
+                            }
+                            <p>@desc</p>
+                            <p class="mb-0 lead"> <a href="@Url.Action("DetailOffreAsync", "Offre", new { id = offre.Id })">Read more</a> </p>
+                        </div>
+                    </div>
+                </div>
+            }
+
+        </div>
     </div>
 </div>
