--- a/AppWeb/Views/Employe/ListesOffresPostulees.cshtml
+++ b/AppWeb/Views/Employe/ListesOffresPostulees.cshtml
@@ -3,12 +3,35 @@
 @model List<OffreViewModel>
 
 
-<ul>
-    @foreach (var offre in Model)
-    {
-        <li>
-            @offre.Intitule
-            <a href="@Url.Action("DetailOffreAsync", "Offre", new { idOffre = offre.Id })">Detail</a>
-        </li>
-    }
-</ul>
+
+<div class="pt-5 bg-dark text-dark">
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-md-12" style="">
+                <h3 class="mb-2 text-light"><b>The jobs you apply</b></h3>
+            </div>
+        </div>
+        <div class="row">
+            @foreach (var offre in Model)
+            {
+                <div class="col-lg-4 p-3 col-md-6">
+                    <div class="card">
+                        <div class="card-body p-4">
+                            @{
+                                int maxlengthtitle = 30;
+                                string title = offre.Intitule.Length <= maxlengthtitle ? offre.Intitule : offre.Intitule.Substring(0, maxlengthtitle) + "...";
+                            }
+                            <h3 contenteditable="true"> <b>@title</b> </h3>
+                            @{
+                                int maxlength = 45;
+                                string desc = offre.Description.Length <= maxlength ? offre.Description : offre.Description.Substring(0, maxlength) + "...";
+                            }
+                            <p>@desc</p>
+                            <p class="mb-0 lead"> <a href="@Url.Action("DetailOffreAsync", "Offre", new { id = offre.Id })">Read more</a> </p>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
