--- a/AppWeb/Views/Offre/DetailOffre.cshtml
+++ b/AppWeb/Views/Offre/DetailOffre.cshtml
@@ -2,16 +2,35 @@
 
 @model OffreViewModel
 
-<div>
-
-    @Model.Intitule
-
-    @Model.Description
+<div class="pt-5 bg-dark align-items-center d-flex bg-dark">
+    <div class="container py-5 my-5">
+        <div class="row">
+            <div class="col-md-8 px-md-5">
+                <h1 class="display-3 mb-4">@Model.Intitule</h1>
+                <p class="lead mb-4">@Model.Description</p> 
+                
+                <div class="p-4 col-md-12" style="font-size:1rem;">
+                    <h2 class="mb-4">Informations</h2>
+                    <p>
+                       <i class="now-ui-icons ui-1_calendar-60  mr-3 d-inline text-muted"></i>Publié le @Model.Date.ToString("dd/MM/yyyy")
+                    </p>
+                    <p>
+                        <i class="now-ui-icons d-inline mr-3 text-muted objects_diamond"></i>@Model.Salaire €
+                    </p>
+                    <p>
+                        <i class="now-ui-icons business_globe d-inline mr-3 text-muted"></i>@Model.Responsable
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-body p-4 text-center">
+                    <button onclick="postuler('@Model.Id')" class="btn btn-lg btn-primary">Apply</button>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-
-<button type="button" onclick="postuler('@Model.Id')">Postuler</button>
-
 
 <script>
 
