--- a/AppWeb/Views/Shared/_Layout.cshtml
+++ b/AppWeb/Views/Shared/_Layout.cshtml
@@ -1,43 +1,106 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title - Mon application ASP.NET</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.standalone.min.css">
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/Scripts/nav-ontop")
+    @Scripts.Render("~/bundles/jquery")
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+<body class="bg-dark">
+    <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Nom de l'application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Mes offres postulées", "GetOffresPostuleesAsync", "Employe")</li>
-                    <li>@Html.ActionLink("Offres", "LitesOffresAsync", "Offre")</li>
+            <a class="navbar-brand" data-placement="bottom" style="font-size:1.3rem" data-toggle="tooltip" href="@Url.Action("Index","Home")">FIND YOUR JOB</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNowUIKitFree">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse text-center justify-content-end" id="navbarNowUIKitFree">
+                <ul class="navbar-nav">
+                    <li class="nav-item mx-1 align-items-center d-flex justify-content-center">
+                        <a class="nav-link" href="@Url.Action("LitesOffresAsync","Offre")">
+                            <i class="now-ui-icons files_paper x2 mr-2"></i>&nbsp;OFFERS
+                        </a>
+                    </li>
+                    <li class="nav-item mx-1 align-items-center d-flex justify-content-center">
+                        <a class="nav-link" href="#">
+                            <i class="now-ui-icons files_paper x2 mr-2"></i>COMPONENTS
+                        </a>
+                    </li>
                 </ul>
+                <a class="btn btn-light text-primary" href="@Url.Action("GetOffresPostuleesAsync","Employe")">
+                    <i class="now-ui-icons users_single-02 mr-1"></i>ACCOUNT
+                </a>
+            </div>
+        </div>
+    </nav>
+
+    @RenderBody()
+
+    <div class="">
+        <div class="container">
+            <div class="row">
+                <div class="p-4 col-md-3">
+                    <h2 class="mb-4">Find your job</h2>
+                    <p>Internal platform to the job-sharing business</p>
+                </div>
+                <div class="p-4 col-md-3">
+                    <h2 class="mb-4">Pages</h2>
+                    <ul class="list-unstyled"> 
+                        <a href="@Url.Action("Index", "Home")" class="text-light">Home</a> <br> 
+                        <a href="@Url.Action("LitesOffresAsync","Offre")" class="text-light">Offers</a> <br> 
+                        <a href="#" class="text-light">Our services</a> <br> 
+                        <a href="@Url.Action("GetOffresPostuleesAsync","Employe")" class="text-light">Account</a> 
+                    </ul>
+                </div>
+                <div class="p-4 col-md-3">
+                    <h2 class="mb-4">Contact</h2>
+                    <p>
+                        <a href="#" class="text-light">
+                            <i class="fa d-inline mr-3 text-muted fa-phone"></i>+246 - 542 550 5462
+                        </a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-light">
+                            <i class="fa d-inline mr-3 text-muted fa-envelope-o"></i>info@pingendo.com
+                        </a>
+                    </p>
+                    <p>
+                        <a href="#" class="text-light">
+                            <i class="fa d-inline mr-3 fa-map-marker text-muted"></i>365 Park Street, NY
+                        </a>
+                    </p>
+                </div>
+                <div class="p-4 col-md-3">
+                    <h2 class="mb-4">Subscribe</h2>
+                    <form>
+                        <fieldset class="form-group"> <label for="exampleInputEmail1">Get our newsletter</label> <input type="email" class="form-control" placeholder="Enter email"> </fieldset> <button type="submit" class="btn btn-outline-dark">Submit</button>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 mt-3">
+                    <p class="text-center">Site développé par Mathieu RAVEL et Bernardo PEREIRA AUGUSTO.</p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
+    
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="popover"]').popover();
+            $('[data-toggle="tooltip"]').tooltip();
+
+        });
+    </script>
 </body>
 </html>
