--- a/AppWeb/Views/Shared/_Layout.cshtml
+++ b/AppWeb/Views/Shared/_Layout.cshtml
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title - Mon application ASP.NET</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.standalone.min.css">
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/Scripts/nav-ontop")
-    @Scripts.Render("~/bundles/jquery")
+
+
 </head>
 <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
@@ -26,8 +28,8 @@
                         </a>
                     </li>
                     <li class="nav-item mx-1 align-items-center d-flex justify-content-center">
-                        <a class="nav-link" href="#">
-                            <i class="now-ui-icons files_paper x2 mr-2"></i>COMPONENTS
+                        <a class="nav-link" href="@Url.Action("CreateOfferView","Offre")">
+                            <i class="now-ui-icons ui-1_simple-add x2 mr-2"></i>CREATE
                         </a>
                     </li>
                 </ul>
@@ -49,11 +51,11 @@
                 </div>
                 <div class="p-4 col-md-3">
                     <h2 class="mb-4">Pages</h2>
-                    <ul class="list-unstyled"> 
-                        <a href="@Url.Action("Index", "Home")" class="text-light">Home</a> <br> 
-                        <a href="@Url.Action("LitesOffresAsync","Offre")" class="text-light">Offers</a> <br> 
-                        <a href="#" class="text-light">Our services</a> <br> 
-                        <a href="@Url.Action("GetOffresPostuleesAsync","Employe")" class="text-light">Account</a> 
+                    <ul class="list-unstyled">
+                        <li><a href="@Url.Action("Index", "Home")" class="text-light">Home</a> <br> </li>
+                        <li><a href="@Url.Action("LitesOffresAsync","Offre")" class="text-light">Offers</a> <br> </li>
+                        <li><a href="#" class="text-light">Our services</a><br></li>
+                        <li><a href="@Url.Action("GetOffresPostuleesAsync","Employe")" class="text-light">Account</a></li>
                     </ul>
                 </div>
                 <div class="p-4 col-md-3">
@@ -88,19 +90,8 @@
             </div>
         </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
     
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="popover"]').popover();
-            $('[data-toggle="tooltip"]').tooltip();
-
-        });
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    
 </body>
 </html>
