--- a/AppWeb/Views/Employe/ListesOffresPostulees.cshtml
+++ b/AppWeb/Views/Employe/ListesOffresPostulees.cshtml
@@ -8,30 +8,9 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-md-12" style="">
-                <h3 class="mb-2 text-light"><b>The jobs you apply</b></h3>
+                <h3 class="mb-2 text-light"><b>The jobs you are applying for</b></h3>
             </div>
         </div>
-        <div class="row">
-            @foreach (var offre in Model)
-            {
-                <div class="col-lg-4 p-3 col-md-6">
-                    <div class="card">
-                        <div class="card-body p-4">
-                            @{
-                                int maxlengthtitle = 30;
-                                string title = offre.Intitule.Length <= maxlengthtitle ? offre.Intitule : offre.Intitule.Substring(0, maxlengthtitle) + "...";
-                            }
-                            <h3 contenteditable="true"> <b>@title</b> </h3>
-                            @{
-                                int maxlength = 45;
-                                string desc = offre.Description.Length <= maxlength ? offre.Description : offre.Description.Substring(0, maxlength) + "...";
-                            }
-                            <p>@desc</p>
-                            <p class="mb-0 lead"> <a href="@Url.Action("DetailOffreAsync", "Offre", new { id = offre.Id })">Read more</a> </p>
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
+        @Html.Partial("_listeOffres", Model)
     </div>
 </div>
