--- a/AppWeb/Views/Offre/DetailOffre.cshtml
+++ b/AppWeb/Views/Offre/DetailOffre.cshtml
@@ -12,7 +12,7 @@
                 <div class="p-4 col-md-12" style="font-size:1rem;">
                     <h2 class="mb-4">Informations</h2>
                     <p>
-                       <i class="now-ui-icons ui-1_calendar-60  mr-3 d-inline text-muted"></i>Publié le @Model.Date.ToString("dd/MM/yyyy")
+                       <i class="now-ui-icons ui-1_calendar-60  mr-3 d-inline text-muted"></i>Published on @Model.Date.ToString("dd/MM/yyyy")
                     </p>
                     <p>
                         <i class="now-ui-icons d-inline mr-3 text-muted objects_diamond"></i>@Model.Salaire €
@@ -32,6 +32,21 @@
     </div>
 </div>
 
+<div class="modal fade" id="modal2">
+    <div class="modal-dialog modal-sm" style="top: 40%;" role="document">
+        <div class="modal-content text-center bg-primary">
+            <div class="modal-body">
+                <button class="btn btn-light btn-lg btn-icon rounded shadow" type="button">
+                    <i class="now-ui-icons users_circle-08 text-primary x2"></i>
+                </button>
+                <p id="message_modal" class="m-4"></p>
+                @*<button type="button" class="btn btn-primary mr-3">BACK</button>*@
+                <button type="button" class="btn btn-primary ml-3" data-dismiss="modal"> CLOSE </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
 
     function postuler(id) {
@@ -40,12 +55,9 @@
             type: "POST",
             data: { idOffre: id },
             success: function (data) {
-                if (data.error) {
-                    alert(data.message);
-                }
-                else {
-                    alert(data.message);
-                }
+                $("#modal2").find("#message_modal").html(data.message);
+                
+                $("#modal2").modal('show');
             }
         });
     }
